fix: 博文图片丢失

--- a/blogs/Android/微信朋友圈多图分享方案.md
+++ b/blogs/Android/微信朋友圈多图分享方案.md
@@ -12,7 +12,7 @@ categories:
 
 > 本库经过几个版本的升级，当前的分享逻辑和本文中略有不同，但整体思想是一致的，实际方案请[阅读源码](https://github.com/shichaohui/WXShareMultiImage)。
 
-![无法分享到微信](https://upload-images.jianshu.io/upload_images/1837368-1120a9be278804d9.jpeg?imageMogr2/auto-orient/strip|imageView2/2/w/360/format/webp)
+![无法分享到微信](https://s1.ax1x.com/2023/03/24/ppBGtKK.png)
 
 前些日子微信更新到了 v6.7.3 版本，传统的多图分享方式已经无效了。
 
@@ -38,7 +38,7 @@ startActivity(intent)
 
 虽然 v6.7.3 不能直接分享多图了，但是接口其实还是保留了的，只要在传递参数 `Intent.EXTRA_STREAM` 时 urilList 中只携带 1 张图片，还是可以跳转到朋友圈图文分享界面的。如下：
 
-![微信图文分享界面](https://upload-images.jianshu.io/upload_images/1837368-ea7d1727938784a6.jpeg?imageMogr2/auto-orient/strip|imageView2/2/w/360/format/webp)
+![微信图文分享界面](https://s1.ax1x.com/2023/03/24/ppBGNDO.png)
 
 > 微信 v7.0.x 不能使用 Intent.ACTION_SEND_MULTIPLE 分享了，只能使用 Intent.ACTION_SEND，具体解决方案请[阅读源码](https://github.com/shichaohui/WXShareMultiImage)。
 
@@ -192,7 +192,7 @@ https://github.com/shichaohui/WXShareMultiImage
 
 ## 完整的多图分享流程
 
-![流程图](https://upload-images.jianshu.io/upload_images/1837368-39d6871246afc082.jpg?imageMogr2/auto-orient/strip|imageView2/2/w/360/format/webp)
+![流程图](https://s1.ax1x.com/2023/03/24/ppBGdVe.png)
 
 ## [下载 Demo](https://github.com/shichaohui/WXShareMultiImage/blob/master/demo.apk)
 
