feat: 文章添加转载说明

--- a/blogs/FrontEnd/同源策略 & 跨域.md
+++ b/blogs/FrontEnd/同源策略 & 跨域.md
@@ -7,6 +7,8 @@ categories:
  - FrontEnd
 ---
 
+> 转载请注明出处，[点击此处](https://shichaohui.github.io/)可了解 [StoneHui](https://shichaohui.github.io/) 更多信息
+
 ## 同源策略
 
 为保护用户信息安全，防止恶意网站窃取用户数据，浏览器限制本域中的脚本只能访问本域中的资源，这就是同源策略。
