--- a/blogs/设计模式/设计模式.md
+++ b/blogs/设计模式/设计模式.md
@@ -7,6 +7,8 @@ categories:
  - 设计模式
 ---
 
+> 转载请注明出处，[点击此处](https://shichaohui.github.io/)可了解 [StoneHui](https://shichaohui.github.io/) 更多信息
+
 ## 一、简介
 
 设计模式代表了软件开发的最佳实践，是软件开发人员在软件开发过程中面临的一般问题的解决方案，是一套反复使用的、多人知晓的、经过分类编目的代码设计经验的总结。
