--- a/blogs/Android/微信朋友圈多图分享方案.md
+++ b/blogs/Android/微信朋友圈多图分享方案.md
@@ -8,6 +8,8 @@ categories:
  - Android
 ---
 
+> 转载请注明出处，[点击此处](https://shichaohui.github.io/)可了解 [StoneHui](https://shichaohui.github.io/) 更多信息
+
 [Github 查看源码](https://github.com/shichaohui/WXShareMultiImage)
 
 > 本库经过几个版本的升级，当前的分享逻辑和本文中略有不同，但整体思想是一致的，实际方案请[阅读源码](https://github.com/shichaohui/WXShareMultiImage)。
