--- a/blogs/FrontEnd/同源策略 & 跨域.md
+++ b/blogs/FrontEnd/同源策略 & 跨域.md
@@ -7,7 +7,7 @@ categories:
  - FrontEnd
 ---
 
-> <small>转载请注明出处，[点击此处](https://shichaohui.github.io/) 查看更多精彩内容。</small>
+> <small>转载请注明出处，[点击此处](https://shichaohui.github.io/) 查看更多精彩内容</small>
 
 ## 同源策略
 
